--- a/audit_script.ipynb
+++ b/audit_script.ipynb
@@ -13,19 +13,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd30de07",
+   "id": "5edfbc8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAKE SURE YOU HAVE CLEANED DATA BEFORE CONTINUING, AFTER EXPORTING CSV FROM CAL OVERVIEW, OPEN WITH EXCEL >\n",
-    "# CLICK TOP LEFT BOX TO SELECT ALL DATA > UNDER \"HOME\" TAB, CLICK \"FIND & SELECT\", CLICK \"REPLACE\", \n",
-    "# REPLACE COMMA WITH NOTHING > DATA TAB > TEXT TO COLUMNS > DELIMITER= OTHER (\")> SAVE"
+    "# MAKE SURE YOU HAVE CLEANED DATA BEFORE PROCEEDING, GO HERE FOR INSTRUCTIONS -\n",
+    "# https://docs.google.com/document/d/1kx3fUo7jQEw3E7N8vc5IfVie6iHjs_BpnkeU588tUhs/edit?usp=sharing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fcf2f01",
+   "id": "ff5c0981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b493fc",
+   "id": "9fb0f182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9119dca3",
+   "id": "0d1d5793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51df4192",
+   "id": "2e4d0595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4571bb46",
+   "id": "b6b0ae14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f31ed43",
+   "id": "9de80b66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c160489",
+   "id": "87261d89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db3bbfd2",
+   "id": "df2f065b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3307aac4",
+   "id": "8636f058",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ffb1479",
+   "id": "fa310c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90cefd04",
+   "id": "d68f1983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187acfde",
+   "id": "cea7db8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb1b160f",
+   "id": "634ef3c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f45de63",
+   "id": "6b524016",
    "metadata": {},
    "outputs": [],
    "source": []
