--- a/audit_script.ipynb
+++ b/audit_script.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5edfbc8d",
+   "id": "4d25c478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5c0981",
+   "id": "8cb3934a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,14 @@
    "outputs": [],
    "source": [
     "# Drop the columns\n",
-    "df = df.drop(columns=['response', 'organizer', 'start', 'end'])\n",
+    "df = df.drop(columns=['start', 'end'])\n",
     "# print(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fb0f182",
+   "id": "5201130c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d1d5793",
+   "id": "cc95985d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e4d0595",
+   "id": "76a348f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b0ae14",
+   "id": "114bc75f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de80b66",
+   "id": "17a2545e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87261d89",
+   "id": "76507ad1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df2f065b",
+   "id": "340fc2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8636f058",
+   "id": "4fbe6031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa310c12",
+   "id": "3d9283cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d68f1983",
+   "id": "97839623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea7db8a",
+   "id": "0c797594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634ef3c1",
+   "id": "82644b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b524016",
+   "id": "a95d7e77",
    "metadata": {},
    "outputs": [],
    "source": []
