--- a/flask_final.ipynb
+++ b/flask_final.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5873354",
+   "id": "9874248f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,10 @@
     "        # Move the new 1:1's dataframe to a new file\n",
     "        new_df.to_csv('1on1s.csv', index=False, index_label='One on Ones')\n",
     "\n",
-    "        # Drop 1:1's from original file\n",
+    "        # Identify 1:1's from original file\n",
     "        mask2 = (df['attendees'] == 2)\n",
-    "\n",
+    "        \n",
+    "        # Drop 1:1's from original file\n",
     "        df.drop(df[mask2].index, inplace=True)\n",
     "\n",
     "        # Sort recurring meetings sheet by cadence\n",
@@ -51,7 +52,13 @@
     "\n",
     "        # Sort 1:1's by cadence\n",
     "        new_df = new_df.sort_values(by='recurrence')\n",
-    "\n",
+    "        \n",
+    "        # Sort recurring meetings sheet by organizer\n",
+    "        df = df.sort_values(by='organizer')\n",
+    "        \n",
+    "        # Sort 1:1's sheet by organizer\n",
+    "        new_df = new_df.sort_values(by='organizer')\n",
+    "        \n",
     "        # Save 1:1's sheet\n",
     "        new_df.to_csv('1on1s.csv', index=False)\n",
     "\n",
@@ -64,14 +71,6 @@
     "if __name__ == '__main__':\n",
     "    app.run()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "772a85d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
