--- a/script.ipynb
+++ b/script.ipynb
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "16712466",
+   "id": "e869762d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "598949cd",
+   "id": "f0637fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "    # Create a csv.writer object\n",
     "    writer = csv.writer(csv_file)\n",
     "    # Write the headers to the file\n",
-    "    writer.writerow(headers)\n",
+    "#     writer.writerow(headers)\n",
     "    # Write the rows from the contents2 list\n",
     "    writer.writerows(contents2)\n",
     "\n",
@@ -156,60 +156,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32e71317",
+   "execution_count": 5,
+   "id": "d8204a58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open the corrupt data CSV file in read mode\n",
+    "# Remove rows with only one attendee (likely time block or WP event) or non recurring meetings\n",
+    "\n",
+    "# Open the corrupt_data CSV file in read mode\n",
     "with open('corrupt_data.csv', 'r') as csv_file:\n",
     "    # Create a csv.reader object\n",
     "    reader = csv.reader(csv_file)\n",
     "    # Read the contents of the file\n",
-    "    corrupt_data = list(reader)\n",
+    "    contents = list(reader)\n",
     "\n",
-    "# Close the file\n",
-    "csv_file.close()\n",
+    "# Create a list to store the modified rows\n",
+    "modified_rows = []\n",
     "\n",
-    "# Remove the headers from the corrupt data list\n",
-    "headers = corrupt_data[0]\n",
-    "corrupt_data = corrupt_data[1:]\n",
+    "# Iterate over the rows in the contents\n",
+    "for row in contents:\n",
+    "    # Check if the value in the \"recurring\" column is \"no\" or the value in the \"attendees\" column is 1\n",
+    "    if row[7] == \"no\" or row[6] == \"1\":\n",
+    "        # Skip this row and move on to the next one\n",
+    "        continue\n",
+    "    # Add the modified row to the list\n",
+    "    modified_rows.append(row)\n",
     "\n",
-    "# Open the output CSV file in append mode\n",
-    "with open('output.csv', 'a', newline='') as csv_file:\n",
+    "# Open the corrupt_data CSV file in write mode\n",
+    "with open('corrupt_data.csv', 'w', newline='') as csv_file:\n",
     "    # Create a csv.writer object\n",
     "    writer = csv.writer(csv_file)\n",
-    "    # Write the rows from the corrupt data list to the file\n",
-    "    writer.writerows(corrupt_data)\n",
+    "    # Write the modified rows to the file\n",
+    "    writer.writerows(modified_rows)\n",
     "\n",
     "# Close the file\n",
     "csv_file.close()\n",
     "\n",
-    "# Clear the contents of the corrupt data file\n",
-    "# open('corrupt_data.csv', 'w').close()"
+    "# Open the output CSV file in read mode\n",
+    "with open('output.csv', 'r') as csv_file:\n",
+    "    # Create a csv.reader object\n",
+    "    reader = csv.reader(csv_file)\n",
+    "    # Read the contents of the file\n",
+    "    contents = list(reader)\n",
+    "\n",
+    "# Get the headers from the contents\n",
+    "headers = contents[0]\n",
+    "\n",
+    "# Create a new list to store the modified rows\n",
+    "modified_rows = []\n",
+    "\n",
+    "# Iterate over the rows in the contents\n",
+    "for row in contents:\n",
+    "    # Check if the value in the \"recurring\" column is \"no\" or the value in the \"attendees\" column is 1\n",
+    "    if row[7] == \"no\" or row[6] == \"1\":\n",
+    "        # Skip this row and move on to the next one\n",
+    "        continue\n",
+    "    # Add the modified row to the list\n",
+    "    modified_rows.append(row)\n",
+    "\n",
+    "# Open the output CSV file in write mode\n",
+    "with open('output.csv', 'w', newline='') as csv_file:\n",
+    "    # Create a csv.writer object\n",
+    "    writer = csv.writer(csv_file)\n",
+    "    \n",
+    "    # Write the modified rows to the file\n",
+    "    writer.writerows(modified_rows)\n",
+    "\n",
+    "# Close the file\n",
+    "csv_file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "373ad728",
+   "execution_count": 6,
+   "id": "fa4be3aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove non recurring meetings\n",
-    "df = pd.read_csv('output.csv')\n",
+    "# Drop start and end columns from output file\n",
     "\n",
-    "# Filter the rows to keep only those with a \"recurring\" value of \"yes\"\n",
-    "df = df.loc[df['recurring'] == 'yes']\n",
+    "# Open the input CSV file in read mode\n",
+    "with open('output.csv', 'r') as csv_file:\n",
+    "    # Create a csv.reader object\n",
+    "    reader = csv.reader(csv_file)\n",
+    "    # Read the contents of the file\n",
+    "    contents = list(reader)\n",
     "\n",
-    "# Write the modified DataFrame to a new CSV file\n",
-    "df.to_csv('output.csv', index=False)"
+    "# Create a list to store the rows that need to be moved to the new file\n",
+    "headers = contents[0]\n",
+    "\n",
+    "# Drop the \"start\" and \"end\" columns from the headers\n",
+    "# headers.pop(2)\n",
+    "# headers.pop(2)\n",
+    "\n",
+    "# Create a new list to store the modified rows\n",
+    "modified_rows = []\n",
+    "\n",
+    "# Iterate over the rows in the contents\n",
+    "for row in contents:\n",
+    "    # Drop the \"start\" and \"end\" columns from the row\n",
+    "    row.pop(2)\n",
+    "    row.pop(2)\n",
+    "    # Add the modified row to the list\n",
+    "    modified_rows.append(row)\n",
+    "\n",
+    "# Open the output CSV file in write mode\n",
+    "with open('output.csv', 'w', newline='') as csv_file:\n",
+    "    # Create a csv.writer object\n",
+    "    writer = csv.writer(csv_file)\n",
+    "    # Write the modified headers to the file\n",
+    "#     writer.writerow(headers)\n",
+    "    # Write the modified rows to the file\n",
+    "    writer.writerows(modified_rows)\n",
+    "\n",
+    "# Close the file\n",
+    "csv_file.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b282b5a7",
+   "id": "3ac603d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Open the corrupt data CSV file in read mode\n",
+    "# with open('corrupt_data.csv', 'r') as csv_file:\n",
+    "#     # Create a csv.reader object\n",
+    "#     reader = csv.reader(csv_file)\n",
+    "#     # Read the contents of the file\n",
+    "#     corrupt_data = list(reader)\n",
+    "\n",
+    "# # Close the file\n",
+    "# csv_file.close()\n",
+    "\n",
+    "# # Remove the headers from the corrupt data list\n",
+    "# headers = corrupt_data[0]\n",
+    "# corrupt_data = corrupt_data[1:]\n",
+    "\n",
+    "# # Open the output CSV file in append mode\n",
+    "# with open('output.csv', 'a', newline='') as csv_file:\n",
+    "#     # Create a csv.writer object\n",
+    "#     writer = csv.writer(csv_file)\n",
+    "#     # Write the rows from the corrupt data list to the file\n",
+    "#     writer.writerows(corrupt_data)\n",
+    "\n",
+    "# # Close the file\n",
+    "# csv_file.close()\n",
+    "\n",
+    "# # Clear the contents of the corrupt data file\n",
+    "# # open('corrupt_data.csv', 'w').close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "637ba4be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f98f137",
+   "id": "0ba1a71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fdd1d41",
+   "id": "04e3be13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7373794f",
+   "id": "806039a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e615c8",
+   "id": "62361d0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d3a934",
+   "id": "cf3f75e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d964d3d1",
+   "id": "1872b613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f3453b3",
+   "id": "7a99a5b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae925d68",
+   "id": "fcc0f790",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e0c4ba",
+   "id": "f37aff33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5c98ff",
+   "id": "1243c82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f11719",
+   "id": "be176c43",
    "metadata": {},
    "outputs": [],
    "source": [
