--- a/script.ipynb
+++ b/script.ipynb
@@ -11,7 +11,8 @@
     "import re\n",
     "import pandas as pd\n",
     "from openpyxl import load_workbook\n",
-    "import numpy"
+    "import numpy\n",
+    "from datetime import datetime, timedelta"
    ]
   },
   {
@@ -76,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e869762d",
+   "id": "3e457719",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f0637fd4",
+   "id": "0126f788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8204a58",
+   "id": "e84de2e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +230,120 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fa4be3aa",
+   "id": "3b4118cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate time length of meetings\n",
+    "\n",
+    "# Open the input CSV file in read mode\n",
+    "with open('output.csv', 'r') as csv_file:\n",
+    "    # Create a csv.reader object\n",
+    "    reader = csv.reader(csv_file)\n",
+    "    # Read the contents of the file\n",
+    "    contents = list(reader)\n",
+    "\n",
+    "# Get the headers from the contents\n",
+    "headers = contents[0]\n",
+    "\n",
+    "# Add the new \"Time Duration\" column to the headers\n",
+    "headers.append(\"Time Duration\")\n",
+    "\n",
+    "# Create a list to store the modified rows\n",
+    "modified_rows = []\n",
+    "\n",
+    "# Iterate over the rows in the contents\n",
+    "for row in contents:\n",
+    "    # Check if the current row is the header row\n",
+    "    if row[0] == \"title\":\n",
+    "        # Skip this row and move on to the next one\n",
+    "        continue\n",
+    "    # Parse the start and end date and time strings\n",
+    "    start_time = datetime.strptime(row[2], '%Y-%m-%dT%H:%M:%S%z')\n",
+    "    end_time = datetime.strptime(row[3], '%Y-%m-%dT%H:%M:%S%z')\n",
+    "    # Calculate the difference between the start and end times\n",
+    "    time_difference = end_time - start_time\n",
+    "    # Convert the time difference to minutes\n",
+    "    minutes = time_difference / timedelta(minutes=1)\n",
+    "    # Add the time difference to the row\n",
+    "    row.append(time_difference)\n",
+    "    # Add the modified row to the list\n",
+    "    modified_rows.append(row)\n",
+    "\n",
+    "# Open the output CSV file in write mode\n",
+    "with open('output.csv', 'w', newline='') as csv_file:\n",
+    "    # Create a csv.writer object\n",
+    "    writer = csv.writer(csv_file)\n",
+    "    # Write the headers to the file\n",
+    "    writer.writerow(headers)\n",
+    "    # Write the modified rows to the file\n",
+    "    writer.writerows(modified_rows)\n",
+    "\n",
+    "# Close the file\n",
+    "csv_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1df3cc68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new column for time duration of meetings, split recurrence end column by \"T\"\n",
+    "\n",
+    "# Open the input CSV file in read mode\n",
+    "with open('output.csv', 'r') as csv_file:\n",
+    "    # Create a csv.reader object\n",
+    "    reader = csv.reader(csv_file)\n",
+    "    # Read the contents of the file\n",
+    "    contents = list(reader)\n",
+    "\n",
+    "# Close the file\n",
+    "csv_file.close()\n",
+    "\n",
+    "# Get the headers from the contents\n",
+    "headers = contents[0]\n",
+    "\n",
+    "# Add the new \"Time Duration\" column to the headers\n",
+    "headers.append(\"Time Duration\")\n",
+    "\n",
+    "# Create a new list to store the modified rows\n",
+    "modified_rows = []\n",
+    "\n",
+    "# Iterate over the rows in the contents\n",
+    "if \"T\" in row[7]:\n",
+    "    split_value = row[7].split(\"T\")\n",
+    "    # Add the first part of the split value to the row\n",
+    "    modified_row = row[:7] + [split_value[0]]\n",
+    "    # Add the second part of the split value to the row\n",
+    "    modified_row.append(split_value[1])\n",
+    "else:\n",
+    "    # Add the original value to the modified row\n",
+    "    modified_row = row[:7] + [row[7]]\n",
+    "#     # Add an empty value to the modified row\n",
+    "#     modified_row.append(\"\")\n",
+    "\n",
+    "\n",
+    "# Remove the header row from the list of modified rows\n",
+    "# modified_rows = modified_rows[1:]\n",
+    "\n",
+    "# Open the output CSV file in write mode\n",
+    "with open('output.csv', 'w', newline='') as csv_file:\n",
+    "    # Create a csv.writer object\n",
+    "    writer = csv.writer(csv_file)\n",
+    "    # Write the modified headers to the file\n",
+    "    writer.writerow(headers)\n",
+    "    # Write contents\n",
+    "    writer.writerow(contents[1:])\n",
+    "    # Write the modified rows to the file\n",
+    "    writer.writerows(modified_rows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edfce915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,103 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac603d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Open the corrupt data CSV file in read mode\n",
-    "# with open('corrupt_data.csv', 'r') as csv_file:\n",
-    "#     # Create a csv.reader object\n",
-    "#     reader = csv.reader(csv_file)\n",
-    "#     # Read the contents of the file\n",
-    "#     corrupt_data = list(reader)\n",
-    "\n",
-    "# # Close the file\n",
-    "# csv_file.close()\n",
-    "\n",
-    "# # Remove the headers from the corrupt data list\n",
-    "# headers = corrupt_data[0]\n",
-    "# corrupt_data = corrupt_data[1:]\n",
-    "\n",
-    "# # Open the output CSV file in append mode\n",
-    "# with open('output.csv', 'a', newline='') as csv_file:\n",
-    "#     # Create a csv.writer object\n",
-    "#     writer = csv.writer(csv_file)\n",
-    "#     # Write the rows from the corrupt data list to the file\n",
-    "#     writer.writerows(corrupt_data)\n",
-    "\n",
-    "# # Close the file\n",
-    "# csv_file.close()\n",
-    "\n",
-    "# # Clear the contents of the corrupt data file\n",
-    "# # open('corrupt_data.csv', 'w').close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "637ba4be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Open the output CSV file in read mode\n",
-    "# with open('output.csv', 'r') as csv_file:\n",
-    "#     # Create a csv.reader object\n",
-    "#     reader = csv.reader(csv_file)\n",
-    "#     # Read the contents of the file\n",
-    "#     contents = list(reader)\n",
-    "\n",
-    "# # Close the file\n",
-    "# csv_file.close()\n",
-    "\n",
-    "# # Get the headers from the contents\n",
-    "# headers = contents[0]\n",
-    "\n",
-    "# # Drop the \"start\" and \"end\" columns from the headers\n",
-    "# headers.pop(2)\n",
-    "# headers.pop(3)\n",
-    "\n",
-    "# # Create a new list to store the modified rows\n",
-    "# modified_rows = []\n",
-    "\n",
-    "# # Iterate over the rows in the contents\n",
-    "# for row in contents:\n",
-    "#     # Check if the value in the \"recurring\" column is \"no\"\n",
-    "#     if row[7] == \"no\":\n",
-    "#         # Skip this row and move on to the next one\n",
-    "#         continue\n",
-    "#     # Drop the \"start\" and \"end\" columns from the row\n",
-    "#     row.pop(2)\n",
-    "#     row.pop(3)\n",
-    "#     # Add the modified row to the list\n",
-    "#     modified_rows.append(row)\n",
-    "\n",
-    "\n",
-    "    \n",
-    "# # # Remove duplicate rows from the list\n",
-    "# # unique_rows = []\n",
-    "# # for row in modified_rows:\n",
-    "# #     if row not in unique_rows:\n",
-    "# #         unique_rows.append(row)\n",
-    "\n",
-    "# contents3 = [row for row in contents if row not in modified_rows]\n",
-    "\n",
-    "# # Open the output CSV file in write mode\n",
-    "# with open('output.csv', 'w', newline='') as csv_file:\n",
-    "#     # Create a csv.writer object\n",
-    "#     writer = csv.writer(csv_file)\n",
-    "#     # Write the modified headers to the file\n",
-    "#     writer.writerow(headers)\n",
-    "#     # take out non recurring mtgs\n",
-    "#     writer.writerow(contents3)\n",
-    "# # Close the file\n",
-    "# csv_file.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ba1a71d",
+   "id": "a60b8dc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,91 +401,13 @@
     "df = df.drop_duplicates()\n",
     "\n",
     "# Write the modified DataFrame back to the CSV file\n",
-    "df.to_csv('output.csv', index=False)\n"
+    "df.to_csv('output.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e3be13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Open the input CSV file in read mode\n",
-    "# with open('output.csv', 'r') as csv_file:\n",
-    "#     # Create a csv.reader object\n",
-    "#     reader = csv.reader(csv_file)\n",
-    "#     # Read the contents of the file\n",
-    "#     contents = list(reader)\n",
-    "\n",
-    "# # Close the file\n",
-    "# csv_file.close()\n",
-    "\n",
-    "# # Store the headers in a separate variable\n",
-    "# headers = contents[0]\n",
-    "\n",
-    "# # Create a list to store the rows that need to be moved to the new file\n",
-    "# rows_to_move2 = []\n",
-    "\n",
-    "# # Iterate over the rows in the input file\n",
-    "# for row in contents:\n",
-    "#     # Check if the value of the \"recurring\" column is not \"no\" or \"yes\"\n",
-    "#     if row[7] not in ['no', 'yes']:\n",
-    "#         # If the condition is met, add the row to the list of rows to move\n",
-    "#         rows_to_move2.append(row)\n",
-    "\n",
-    "# # Open the new CSV file in write mode\n",
-    "# with open('corrupt_data.csv', 'w', newline='') as csv_file:\n",
-    "#     # Create a csv.writer object\n",
-    "#     writer = csv.writer(csv_file)\n",
-    "#     # Write the rows to be moved to the new file\n",
-    "#     writer.writerows(rows_to_move2)\n",
-    "\n",
-    "# # Close the file\n",
-    "# csv_file.close()\n",
-    "\n",
-    "# # Remove the rows that have been moved to the new file from the original contents\n",
-    "# contents3 = [row for row in contents if row not in rows_to_move2]\n",
-    "\n",
-    "# # Open the input CSV file in write mode\n",
-    "# with open('output.csv', 'w', newline='') as csv_file:\n",
-    "#     # Create a csv.writer object\n",
-    "#     writer = csv.writer(csv_file)\n",
-    "    \n",
-    "#     # Write the headers to the file\n",
-    "#     writer.writerow(headers)\n",
-    "    \n",
-    "#     # Write the modified contents of the file to the file\n",
-    "#     writer.writerows(contents3[1:])\n",
-    "\n",
-    "# # Close the file\n",
-    "# csv_file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "806039a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read in the CSV file as a dataframe\n",
-    "df = pd.read_csv('output.csv')\n",
-    "\n",
-    "# Split the \"recurrence end\" column by \"T\" and assign the resulting dataframe to a new dataframe with the desired column names\n",
-    "df_split = df['recurrence end'].str.split('T', expand=True).rename(columns={0: 'end date', 1: 'time duration'})\n",
-    "\n",
-    "# Concatenate the original dataframe and the split dataframe using the `pd.concat` function\n",
-    "df_final = pd.concat([df, df_split], axis=1)\n",
-    "\n",
-    "# Drop the original \"recurrence end\" column\n",
-    "df_final.drop(columns=['recurrence end'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62361d0d",
+   "id": "b57bbaad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3f75e8",
+   "id": "7f59647d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1872b613",
+   "id": "1ae95fa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a99a5b5",
+   "id": "048bfc7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc0f790",
+   "id": "920c9c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f37aff33",
+   "id": "eff244fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1243c82b",
+   "id": "4a2af134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be176c43",
+   "id": "6cb51f43",
    "metadata": {},
    "outputs": [],
    "source": [
