--- a/script.ipynb
+++ b/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1b5dd486",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cd7ed21c",
    "metadata": {},
    "outputs": [],
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3e457719",
+   "execution_count": null,
+   "id": "15bce5c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0126f788",
+   "execution_count": null,
+   "id": "15f94250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e84de2e3",
+   "execution_count": null,
+   "id": "ee22ca90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3b4118cc",
+   "execution_count": null,
+   "id": "046f4b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
     "headers = contents[0]\n",
     "\n",
     "# Add the new \"Time Duration\" column to the headers\n",
-    "headers.append(\"Time Duration\")\n",
+    "headers.append(\"Time (in minutes)\")\n",
     "\n",
     "# Create a list to store the modified rows\n",
     "modified_rows = []\n",
@@ -264,9 +264,9 @@
     "    # Calculate the difference between the start and end times\n",
     "    time_difference = end_time - start_time\n",
     "    # Convert the time difference to minutes\n",
-    "    minutes = time_difference / timedelta(minutes=1)\n",
+    "    minutes = int(time_difference.total_seconds() / 60)\n",
     "    # Add the time difference to the row\n",
-    "    row.append(time_difference)\n",
+    "    row.append(minutes)\n",
     "    # Add the modified row to the list\n",
     "    modified_rows.append(row)\n",
     "\n",
@@ -286,11 +286,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1df3cc68",
+   "id": "f38a3a7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create new column for time duration of meetings, split recurrence end column by \"T\"\n",
+    "import datetime\n",
     "\n",
     "# Open the input CSV file in read mode\n",
     "with open('output.csv', 'r') as csv_file:\n",
@@ -299,51 +299,44 @@
     "    # Read the contents of the file\n",
     "    contents = list(reader)\n",
     "\n",
-    "# Close the file\n",
-    "csv_file.close()\n",
-    "\n",
     "# Get the headers from the contents\n",
-    "headers = contents[0]\n",
-    "\n",
-    "# Add the new \"Time Duration\" column to the headers\n",
-    "headers.append(\"Time Duration\")\n",
-    "\n",
-    "# Create a new list to store the modified rows\n",
+    "headers = contents[0]    \n",
+    "    \n",
+    "# Create a list to store the modified rows\n",
     "modified_rows = []\n",
     "\n",
     "# Iterate over the rows in the contents\n",
-    "if \"T\" in row[7]:\n",
-    "    split_value = row[7].split(\"T\")\n",
-    "    # Add the first part of the split value to the row\n",
-    "    modified_row = row[:7] + [split_value[0]]\n",
-    "    # Add the second part of the split value to the row\n",
-    "    modified_row.append(split_value[1])\n",
-    "else:\n",
-    "    # Add the original value to the modified row\n",
-    "    modified_row = row[:7] + [row[7]]\n",
-    "#     # Add an empty value to the modified row\n",
-    "#     modified_row.append(\"\")\n",
-    "\n",
-    "\n",
-    "# Remove the header row from the list of modified rows\n",
-    "# modified_rows = modified_rows[1:]\n",
+    "for row in contents:\n",
+    "    # Check if the current row is the header row\n",
+    "    if row[0] == \"title\":\n",
+    "        # Skip this row and move on to the next one\n",
+    "        continue\n",
+    "    # Parse the \"recurrence end\" date and time string\n",
+    "    recurrence_end = datetime.datetime.strptime(row[9], '%Y-%m-%dT%H:%M:%S%z')\n",
+    "    # Convert the \"recurrence end\" date and time to the \"full date/time pattern (short time)\" format\n",
+    "    formatted_recurrence_end = recurrence_end.strftime(\"%a, %b %d, %Y %I:%M %p\")\n",
+    "    # Replace the original \"recurrence end\" value with the formatted value\n",
+    "    row[9] = formatted_recurrence_end\n",
+    "    # Add the modified row to the list\n",
+    "    modified_rows.append(row)\n",
     "\n",
     "# Open the output CSV file in write mode\n",
     "with open('output.csv', 'w', newline='') as csv_file:\n",
     "    # Create a csv.writer object\n",
     "    writer = csv.writer(csv_file)\n",
-    "    # Write the modified headers to the file\n",
+    "    # write headers\n",
     "    writer.writerow(headers)\n",
-    "    # Write contents\n",
-    "    writer.writerow(contents[1:])\n",
     "    # Write the modified rows to the file\n",
-    "    writer.writerows(modified_rows)\n"
+    "    writer.writerows(modified_rows)\n",
+    "\n",
+    "# Close the file\n",
+    "csv_file.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edfce915",
+   "id": "d1b94e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a60b8dc6",
+   "id": "84581efb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b57bbaad",
+   "id": "6e9e01ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,27 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f59647d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read in the Excel file using pandas\n",
-    "df = pd.read_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings')\n",
-    "\n",
-    "# remove 1 attendee entries (likely lunch/time blocks) and non recurring meetings\n",
-    "mask = (df['attendees'] == 1) | (df['recurring'] == 'no')\n",
-    "\n",
-    "# Delete the rows that match the mask\n",
-    "df = df[~mask]\n",
-    "\n",
-    "# Write the modified DataFrame to the Excel file\n",
-    "df.to_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ae95fa3",
+   "id": "ea396607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,15 +428,15 @@
     "df2 = df[mask]\n",
     "\n",
     "writer = pd.ExcelWriter(path, engine = 'xlsxwriter')\n",
-    "df.to_excel(writer, sheet_name = 'recurring_meetings')\n",
-    "df2.to_excel(writer, sheet_name = '1_on_1s')\n",
+    "df.to_excel(writer, sheet_name = 'recurring_meetings', index=False)\n",
+    "df2.to_excel(writer, sheet_name = '1_on_1s', index=False)\n",
     "writer.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "048bfc7c",
+   "id": "1393a70e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,140 +447,44 @@
     "\n",
     "\n",
     "writer = pd.ExcelWriter(path, engine = 'xlsxwriter')\n",
-    "df_not1on1s.to_excel(writer, sheet_name = 'recurring_meetings')\n",
-    "df2.to_excel(writer, sheet_name = '1_on_1s')\n",
+    "df_not1on1s.to_excel(writer, sheet_name = 'recurring_meetings', index=False)\n",
+    "df2.to_excel(writer, sheet_name = '1_on_1s', index=False)\n",
     "writer.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920c9c29",
+   "id": "0a0ab585",
    "metadata": {},
    "outputs": [],
    "source": [
     "# copy meetings you or your leader owns to a new sheet\n",
     "df = pd.read_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings')\n",
+    "df_1on1 = pd.read_excel('cal_audit_tool.xlsx', sheet_name='1_on_1s')\n",
     "\n",
-    "# Identify meetings where you/your leader is the organizer\n",
-    "mask2 = df['response'] == 'ORGANIZER'\n",
-    "df_my_mtgs = df[mask2]\n",
-    "df_not_my_mtgs = df[~mask2]\n",
+    "# Identify meetings in both dataframes where you/your leader is the organizer\n",
+    "mask = df['response'] == 'ORGANIZER'\n",
+    "df_my_mtgs_recurring = df[mask]\n",
+    "mask = df_1on1['response'] == 'ORGANIZER'\n",
+    "df_my_mtgs_1on1 = df_1on1[mask]\n",
+    "\n",
+    "# Concatenate the rows from both dataframes into a single dataframe\n",
+    "df_my_mtgs = pd.concat([df_my_mtgs_recurring, df_my_mtgs_1on1])\n",
+    "\n",
+    "\n",
+    "# reset index in each sheet\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "df_1on1.reset_index(drop=True, inplace=True)\n",
     "\n",
     "\n",
     "path = r\"C:\\Users\\s4508\\Documents\\audit\\cal_audit_tool.xlsx\"\n",
     "writer = pd.ExcelWriter(path, engine = 'xlsxwriter')\n",
-    "df_not_my_mtgs.to_excel(writer, sheet_name = 'recurring_meetings')\n",
-    "df2.to_excel(writer, sheet_name = '1_on_1s')\n",
-    "df_my_mtgs.to_excel(writer, sheet_name = 'Meetings_I_Own')\n",
-    "\n",
+    "df.to_excel(writer, sheet_name = 'recurring_meetings', index=False)\n",
+    "df_1on1.to_excel(writer, sheet_name = '1_on_1s', index=False)\n",
+    "df_my_mtgs.to_excel(writer, sheet_name = 'Meetings I Own', index=False)\n",
     "\n",
     "writer.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eff244fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Read in the Excel file using pandas\n",
-    "# df_recurring = pd.read_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings')\n",
-    "# df_1on1s = pd.read_excel('cal_audit_tool.xlsx', sheet_name='1_on_1s')\n",
-    "# df_meetings = pd.read_excel('cal_audit_tool.xlsx', sheet_name='Meetings_I_Own')\n",
-    "\n",
-    "# # # Replace all question marks in the data with an empty string\n",
-    "# # df_recurring = df_recurring.replace('?', '')\n",
-    "# # df_1on1s = df_1on1s.replace('?', '')\n",
-    "# # df_meetings = df_meetings.replace('?', '')\n",
-    "# mask = (df['attendees'] == 1)\n",
-    "# df = df[~mask]\n",
-    "# # Write the modified data back to the Excel file\n",
-    "# path = r\"C:\\Users\\s4508\\Documents\\audit\\cal_audit_tool.xlsx\"\n",
-    "# writer = pd.ExcelWriter(path, engine = 'xlsxwriter')\n",
-    "# df_recurring.to_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings', index=False)\n",
-    "# df_1on1s.to_excel('cal_audit_tool.xlsx', sheet_name='1_on_1s', index=False)\n",
-    "# df_meetings.to_excel('cal_audit_tool.xlsx', sheet_name='Meetings_I_Own', index=False)\n",
-    "\n",
-    "# writer.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a2af134",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # drop extra columns added\n",
-    "# # Load the workbook\n",
-    "# workbook = load_workbook('cal_audit_tool.xlsx')\n",
-    "\n",
-    "# # Read in the \"recurring_meetings\" sheet as a dataframe\n",
-    "# recurring_meetings_df = pd.read_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings')\n",
-    "\n",
-    "# # Drop the \"Unnamed: 0\" column from the dataframe\n",
-    "# recurring_meetings_df.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "\n",
-    "# # Write the modified dataframe back to the \"recurring_meetings\" sheet\n",
-    "# recurring_meetings_df.to_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings', index=False)\n",
-    "\n",
-    "# # Read in the \"Meetings_I_Own\" sheet as a dataframe\n",
-    "# meetings_i_own_df = pd.read_excel('cal_audit_tool.xlsx', sheet_name='Meetings_I_Own')\n",
-    "\n",
-    "# # Drop the \"Unnamed: 0\" column from the dataframe\n",
-    "# meetings_i_own_df.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "\n",
-    "# # Write the modified dataframe back to the \"Meetings_I_Own\" sheet\n",
-    "# meetings_i_own_df.to_excel('cal_audit_tool.xlsx', sheet_name='Meetings_I_Own', index=False)\n",
-    "\n",
-    "# # Read\n",
-    "# oneOnones_df = pd.read_excel('cal_audit_tool.xlsx', sheet_name='1_on_1s')\n",
-    "\n",
-    "# # Drop\n",
-    "# oneOnones_df.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "\n",
-    "# # Write\n",
-    "# oneOnones_df.to_excel('cal_audit_tool.xlsx', sheet_name='1_on_1s', index=False)\n",
-    "\n",
-    "# # Save the workbook\n",
-    "# workbook.save('cal_audit_tool.xlsx')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cb51f43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Clean up recurrence column in first sheet\n",
-    "# df_recur_mtgs = pd.read_excel('cal_audit_tool.xlsx', sheet_name='recurring_meetings')\n",
-    "\n",
-    "# # Create a regular expression pattern that matches only letters, numbers, commas, and apostrophes\n",
-    "# pattern = re.compile('[^a-zA-Z0-9,\\']')\n",
-    "\n",
-    "# # Apply the pattern to the \"recurrence\" column and remove any characters that do not match\n",
-    "# df_recur_mtgs['recurrence'] = df_recur_mtgs['recurrence'].apply(lambda x: pattern.sub('', x))\n",
-    "\n",
-    "# # Clean up recurrence column in second sheet\n",
-    "# df_owned_mtgs = pd.read_excel('cal_audit_tool.xlsx', sheet_name='Meetings_I_Own', index=False)\n",
-    "\n",
-    "# # regex for owned meetings sheet\n",
-    "# pattern2 = re.compile('[^a-zA-Z0-9,\\']')\n",
-    "\n",
-    "# # apply regex\n",
-    "# df_owned_mtgs['recurrence'] = df_owned_mtgs['recurrence'].apply(lambda x: pattern2.sub('', x))\n",
-    "\n",
-    "# # Read in 1 on 1's sheet\n",
-    "# df_1_on_ones = pd.read_excel('cal_audit_tool.xlsx', sheet_name='1_on_1s', index=False)\n",
-    "\n",
-    "# # regex 1:1 sheet\n",
-    "# pattern3 = re.compile('[^a-zA-Z0-9,\\']')\n",
-    "\n",
-    "# # apply regex\n",
-    "# df_1_on_ones['recurrence'] = df_1_on_ones['recurrence'].apply(lambda x: pattern3.sub('', x))"
    ]
   }
  ],
